# NSU-FIT

./: .gitignore  README.md
2nd-year/Computers and devices/laboratory work #2/: test
2nd-year/Computers and devices/laboratory work #3/: main_O1.s  main_O3.s  main_Ofast.s
2nd-year/Computers and devices/laboratory work #4/: main.c  main_O1.s  main_O2.s  main_Og.s
2nd-year/Computers and devices/laboratory work #5/: camera.c
2nd-year/Computers and devices/laboratory work #6/: Device.cpp
2nd-year/Computers and devices/laboratory work #7/with_cblas/: CMakeLists.txt
2nd-year/Computers and devices/laboratory work #8/: CMakeLists.txt  cache.c
2nd-year/Computers and devices/laboratory work #9/: CMakeLists.txt
2nd-year/Parallel programming/laboratory work #0/: main.c
2nd-year/Parallel programming/laboratory work #1/: CMakeLists.txt
2nd-year/Parallel programming/laboratory work #2/: CMakeLists.txt
2nd-year/Parallel programming/laboratory work #3/: CMakeLists.txt
2nd-year/Parallel programming/laboratory work #5/: CMakeLists.txt
2nd-year/Parallel programming/laboratory work #5/src/: main.c  task.c  task.h
3rd-year/coding-theory/mtf/: mtf.sln
3rd-year/models-and-methods-of-artificial-intelligence/: laboratory-work-#4  laboratory-work-#5
3rd-year/network-programming/laboratory_work_4/: CMakeLists.txt  README.md
3rd-year/network-programming/laboratory_work_4/configs/: master.xml  normal_node.xml  viewer_node.xml
3rd-year/network-programming/laboratory_work_4/src/: main.cpp
3rd-year/network-programming/laboratory_work_4/src/backend/: Coord.h  Game.h
3rd-year/network-programming/laboratory_work_4/src/frontend/: GameField.cpp  GameField.h
3rd-year/network-programming/laboratory_work_4/src/info/: snakes_task.txt
3rd-year/network-programming/laboratory_work_4/src/protobuf/: snakes.pb.cc  snakes.pb.h
3rd-year/network-programming/laboratory_work_4/src/utility/: IPv4Address.h
4th-year/informaition-security/: laboratory-work-5.docx
4th-year/information-search/: доклад.docx  доклад.pptx
4th-year/introduction-to-the-organization-of-distributed-calculations/laboratory-work-5/: CMakeLists.txt  README.md  main.cpp
4th-year/introduction-to-the-organization-of-distributed-calculations/laboratory-work-5/dht/: HashUtils.cpp  HashUtils.h  MessageUtils.cpp  MessageUtils.h  Node.cpp  Node.h  NodeTable.cpp  NodeTable.h
4th-year/introduction-to-the-organization-of-distributed-calculations/laboratory-work-5/storage/: Storage.cpp  Storage.h
4th-year/introduction-to-the-organization-of-distributed-calculations/laboratory-work-5/utils/: FileSystemUtils.cpp  FileSystemUtils.h  HashUtils.cpp  HashUtils.h  MessageUtils.cpp
4th-year/programming-paradigms/: agent-oriented-programming.docx  agent-oriented-programming.pptx  answers.docx  final.lisp  hw-1.lisp  hw-2.lisp  hw-3.lisp
The 2nd course/Parallel programming/laboratory work #1(2)/: CMakeLists.txt
The 2nd course/Parallel programming/laboratory work #1(2)/src/: linear_equations.c  linear_equations.h  main.c  matrix.c  matrix.h
the-3rd-year/models-and-methods-of-artificial-intelligence/: laboratory-work-#1.mm  laboratory-work-#2.dia  laboratory-work-#4
the-3rd-year/network-programming/laboratory_work_#4/: CMakeLists.txt
the-3rd-year/network-programming/laboratory_work_#4/src/: main.cpp
the-3rd-year/network-programming/laboratory_work_#4/src/backend/: PlayerMode.cpp  PlayerMode.h  SinglePlayerMode.cpp  SinglePlayerMode.h
the-3rd-year/network-programming/laboratory_work_#4/src/frontend/: GameField.cpp  GameField.h  Snake.cpp  Snake.h
the-3rd-year/network-programming/laboratory_work_#4/src/utility/: Point.cpp  Point.h
the-3rd-year/network-programming/laboratory_work_#5/: CMakeLists.txt
the-3rd-year/network-programming/laboratory_work_#5/src/: README.md  main.cpp
the-3rd-year/network-programming/laboratory_work_#5/src/client_processing/: ClientProcessing.cpp  ClientProcessing.h
the-3rd-year/network-programming/laboratory_work_#5/src/server/: Server.cpp
the-3rd-year/network-programming/laboratory_work_#5/src/utility/: SocksRequestParser.cpp
(+523 files in other folders)
